CR-2002-05-22-1: Enhancem.: New script for i18n: Extract messages from install
                            scripts (file: source/scripts/infotext_msg_parse.tcl)

CR-2002-05-22-0: Bugfix:    - infotext binary

JG-2002-05-22-0: Doc:       Fixed description of the environment variable 
                            SGE_TASK_ID for non array jobs in submit man page.

JG-2002-05-21-0: Bugfix:    Recycling of additional group ids did not respect 
                            tightly integrated pe tasks.
                 Issue:     #263

CR-2002-05-21-0: Bugfix:    - smaller bugfixes for infotext binary

CR-2002-05-16-0: Enhancem.: - i18n changes for inst_sge (part 1)
                            - renamed sge_printf into infotext
                              (INteractive Formatted lOcalized TEXT)
                            - added infotext features
                              (-wait -auto -ask options)
                            - MERGED FROM MAINTRUNC
                            - added dstring modules


EB-2002-05-06-0: Bugfix:    qhost -j is broken
                 Issue:     #259
                 Bugtraq:   #4686157
                 Changed:   qhost

CR-2002-05-14-0: Change:    removed sge_printf build from Makfile 

CR-2002-05-13-0: Enhancem.: added sge_printf utilbin source files

AH-2002-05-13-0: Change:    Do no longer flush events immediately after orders 
                            arrival to 'guarantee' scheduling is done not more 
                            often than specified with schedule_interval in 
                            sched_conf(5). 
                 Changed:   sge_qmaster

EB-2002-04-13-0: Bugfix:    qconf -se shows "reschedule_unknown_list" param. 
                 Issues:    #248 
                 Changed:   sge_qmaster, qacct, qconf

CR-2002-05-06-0: Testsuite: fixed check dependencies

AH-2002-05-06-0: Bugfix:    Fix typo in simple.sh job example

CR-2002-05-03-0: Testsuite: - removed rsh with rlogin calls